--- a/src/components/Scrollbar.css
+++ b/src/components/Scrollbar.css
@@ -3,4 +3,5 @@
     background-color: var(--highlight);
     width: 100vw;
     height: 5px;
+    z-index: 999;
 }
